<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="bill_total_hint">Enter the bill total here</string>
    <string name="ten_percent">10%</string>
    <string name="fifteen_percent">15%</string>
    <string name="twenty_percent_btn">20%</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>

</resources>
